<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/page_background"
    tools:context=".account.TermsAndConditions">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="25dp">

            <ImageView
                android:id="@+id/backAccount2"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/back_button"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Terms and Conditions"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:fontFamily="@font/readex_pro"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_marginStart="15dp" />
        </FrameLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="80dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/terms_and_conditions_header"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/red_hat_display_bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/terms_and_conditions"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/red_hat_display"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="1. General Terms"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/red_hat_display_bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/tnc1"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/red_hat_display"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="2. Booking &amp; Reservation Policies"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/red_hat_display_bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/tnc2"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/red_hat_display"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/tnc2_1"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/red_hat_display"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="3. Payment &amp; Fees"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/red_hat_display_bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/tnc3"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/red_hat_display"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/tnc3_1"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/red_hat_display"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="4. Cancellation &amp; Rescheduling"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/red_hat_display_bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/tnc4"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/red_hat_display"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="5. Code of Conduct"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/red_hat_display_bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/tnc5"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/red_hat_display"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="6. Liability &amp; Disclaimer"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/red_hat_display_bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/tnc6"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/red_hat_display"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="7. Privacy Policy"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/red_hat_display_bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/tnc7"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/red_hat_display"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="8. Changes to These Terms"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/red_hat_display_bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/tnc8"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/red_hat_display"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="9. Contact Information"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/red_hat_display_bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/tnc9"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/red_hat_display"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/tnc9_1"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/red_hat_display"/>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </LinearLayout>
</FrameLayout>