<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/page_background"
    tools:context=".admin.AdminNintendoSwitchGameRoomFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/headerRoomsEquipments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="25dp">

            <ImageButton
                android:id="@+id/backBtnAdminRoomsEquipments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/admin_backbtn"
                android:backgroundTint="@color/transparent"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:fontFamily="@font/readex_pro_medium"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:layout_marginStart="25dp"
                android:text="@string/admin_rooms_amp_equipments"
                android:textSize="20sp"/>
        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp">

            <LinearLayout
                android:id="@+id/adminRoomsEquipmentsLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/adminRoomsEquipmentsTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="25dp"
                        android:layout_marginEnd="25dp"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/syne"
                        android:text="@string/admin_nintendo_switch_game_room"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <ImageView
                        android:id="@+id/whiteDivider"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:src="@drawable/white_divider" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/adminNintendoRoomImageView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="25dp"
                    android:scaleType="fitCenter" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="25dp"
                    android:backgroundTint="@color/transparent"
                    android:layout_gravity="end"
                    android:padding="0dp"
                    android:src="@drawable/admin_editimagebtn"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/readex_pro_semibold"
                    android:text="@string/description"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/adminRoomsEquipmentsDesc"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginBottom="10dp"
                    android:padding="15dp"
                    android:hint="@string/add_description"
                    android:text="@string/sampledesc"
                    android:inputType="textMultiLine"
                    android:textColor="@color/white"
                    android:textColorHint="@color/statsGray"
                    android:fontFamily="@font/red_hat_display_semibold"
                    android:textSize="16sp"
                    android:gravity="start"
                    android:maxLines="5"
                    android:background="@drawable/admin_input_bg"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/readex_pro_semibold"
                    android:text="@string/status"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/adminRoomsEquipmentsStatus"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginBottom="10dp"
                    android:paddingStart="10dp"
                    android:background="@drawable/admin_status_bg"/>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginBottom="10dp">

                    <ImageButton
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="0dp"
                        android:backgroundTint="@color/transparent"
                        android:src="@drawable/button_selector"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/red_hat_display_bold"
                        android:gravity="center"
                        android:text="@string/update"
                        android:textSize="18sp"
                        android:textColor="@color/white" />
                </FrameLayout>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>

</FrameLayout>